<?xml version="1.0"?>
<package>
  <name>pff_diff_drive</name>
  <version>0.0.1</version>
  <description>The pff_diff_drive package</description>

  <maintainer email="kmohan@wpi.edu">Kiran Mohan</maintainer>

  <license>PFF_test</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
